arreglo vista mobile

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -5,13 +5,13 @@ li {
 }
 
 form#formu_operacion {
-  display: flex;
-  flex-flow: column nowrap;
+  /*display: flex;
+  flex-flow: column nowrap;*/
   text-align: center;
   background-color: rgb(167, 164, 164);
-  width: 250px;
-  margin: 3vh 40vw;
-  padding: 25px;
+  width: 300px;
+  margin: 3vh 20vw;
+  padding: 15px 5px;
   border-radius: 3px;
   border: 1px Solid white;
 }
@@ -114,7 +114,7 @@ footer {
   background-color: aliceblue;
   margin: 3px;
   padding: 3px;
-  width: 60vw;
+  /*width: 60vw;*/
 }
 
 .caja_cheques {
@@ -172,4 +172,41 @@ footer {
 
 .importe {
   width: 110px;
+}
+
+@media (max-width: 343.98px) {
+  form#formu_operacion {
+    margin: 1vh 2vw;
+    max-width: 220px;
+  }
+}
+
+@media (min-width: 344px) and (max-width: 575.98px) {
+  form#formu_operacion {
+    margin: 1vh 5vw;
+    max-width: 230px;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+  form#formu_operacion {
+    margin: 1vh 15vw;
+  }
+}
+@media (min-width: 768px) and (max-width: 991.98px) {
+  form#formu_operacion {
+    margin: 1vh 20vw;
+  }
+}
+@media (min-width: 992px) and (max-width: 1199.98px) {
+  form#formu_operacion {
+    margin: 1vh 30vw;
+    max-width: 250px;
+  }
+}
+
+@media (min-width: 1200px) {
+  form#formu_operacion {
+    margin: 1vh 35vw;
+  }
 }
