se corrigio vista y alert y pie de pagina

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -61,14 +61,20 @@ footer {
   text-align: center;
 }
 
-#pantalla {
-  position: absolute;
-  background-color: rgb(112, 112, 112);
-  border-radius: 6px;
+html {
+  min-height: 100%;
+  position: relative;
 }
 
-#contenido {
-  margin-bottom: 50px;
+body {
+  background-color: rgb(112, 112, 112);
+  border-radius: 6px;
+  padding-bottom: 50px;
+}
+
+main {
+  margin-top: 20px;
+  margin-bottom: 40px;
 }
 
 #error {
@@ -112,42 +118,19 @@ footer {
     0 0 10px rgba(255, 255, 255, 0.5);
 }
 
-.caja_op {
-  border-radius: 3rem;
-  border: 1px solid red;
-  background-color: aliceblue;
-  margin: 3px;
-  padding: 3px;
-}
-
-.caja_cheques {
-  border-radius: 3rem;
-  border: 1px solid yellow;
-  background-color: aliceblue;
-  margin: 3px;
-  padding: 3px;
-  width: 25vw;
-}
-
-.caja_total {
-  border-radius: 3rem;
-  border: 1px solid blueviolet;
-  background-color: aliceblue;
-  margin: 3px;
-  padding: 3px;
-  width: 30vw;
-}
-
 .alerta {
   background: #f8f8f8;
   position: absolute;
   z-index: 1;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 40%;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+#caja_mensajeria {
+  position: relative;
 }
 
 #mensajeria {
@@ -170,7 +153,7 @@ footer {
 }
 
 .fecha {
-  width: 90px;
+  width: 115px;
 }
 
 .importe {
@@ -180,13 +163,16 @@ footer {
 @media (max-width: 343.98px) {
   form#formu_operacion {
     margin: 1vh 2vw;
-    max-width: 220px;
+    width: 220px;
   }
   form#formu_cheques {
     margin: 1vh 2vw;
-    max-width: 220px;
+    width: 220px;
   }
-  #pie {
+  #nombre {
+    width: 100px;
+  }
+  footer {
     visibility: hidden;
   }
 }
@@ -194,34 +180,47 @@ footer {
 @media (min-width: 344px) and (max-width: 575.98px) {
   form#formu_operacion {
     margin: 1vh 20vw;
-    max-width: 230px;
+    width: 230px;
   }
   form#formu_cheques {
     margin: 1vh 20vw;
-    max-width: 230px;
-  }
-  #pie {
-    visibility: visible;
+    width: 230px;
   }
   footer {
-    position: static;
+    position: absolute;
+    bottom: 0;
+    left: 1%;
   }
 }
 
 @media (min-width: 576px) and (max-width: 767.98px) {
   form#formu_operacion {
     margin: 1vh 25vw;
+    max-width: 240px;
   }
   form#formu_cheques {
     margin: 1vh 25vw;
+    max-width: 240px;
+  }
+  footer {
+    position: absolute;
+    bottom: 0;
+    left: 6%;
   }
 }
+
 @media (min-width: 768px) and (max-width: 991.98px) {
   form#formu_operacion {
-    margin: 1vh 25vw;
+    margin: 1vh 20vw;
   }
   form#formu_cheques {
-    margin: 1vh 25vw;
+    margin: 1vh 20vw;
+    width: 300px;
+  }
+  footer {
+    position: absolute;
+    bottom: 0;
+    left: 12%;
   }
 }
 
@@ -234,10 +233,9 @@ footer {
     max-width: 600px;
   }
   footer {
-    position: fixed;
+    position: absolute;
     bottom: 0;
-    left: 40%;
-    transform: translate(-30%);
+    left: 20%;
   }
 }
 
@@ -248,5 +246,10 @@ footer {
   form#formu_cheques {
     margin: 1vh 16vw;
     max-width: 800px;
+  }
+  footer {
+    position: absolute;
+    bottom: 0;
+    left: 28%;
   }
 }
