--- a/css/estilo.css
+++ b/css/estilo.css
@@ -77,6 +77,12 @@ main {
   margin-bottom: 20px;
 }
 
+button#desconectar {
+  opacity: 0.7;
+  padding: 0 4px;
+  font-size: 0.8rem;
+}
+
 #error {
   background-color: burlywood;
   border-radius: 3px;
